criação dos modelos; criação da tela raiz para restaurante; criação do serviço para restaurante; ajuste/correção nas telas de linstagem e criação/edição de restaurante; ajuste/correção no layout.

--- a/Restaurant.System/RestaurantSystemAngular/src/app/app.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <rsApp-menu-root></rsApp-menu-root>
 <div class="container body-content">
-    <rsApp-home></rsApp-home>
+    <router-outlet></router-outlet>
 </div>
