--- a/Restaurant.System/RestaurantSystemAngular/src/app/menu-root/menu-root.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/menu-root/menu-root.component.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/Restaurant">Restaurantes</a></li>
-                <li><a href="/Dish">Pratos</a></li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/restaurant">Restaurantes</a></li>
+                <li><a href="/dish">Pratos</a></li>
             </ul>
         </div>
     </div>
