--- a/Restaurant.System/RestaurantSystemAngular/src/app/dish/dish.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/dish/dish.component.html
@@ -1,5 +1,5 @@
 <div class="panel-title">
-  <h4>Restaurantes</h4>
+  <h4>Pratos</h4>
 </div>
 <div class="panel-body" ng-app="restaurantSystem" ng-controller="restaurantListController">
   <div class="panel-default">
@@ -12,10 +12,10 @@
               </div>
               <div class="form-group col-md-12">
                   <button class="btn-search" type="submit"><i class="fas fa-search"></i> Pesquisar</button> 
-                  <button class="btn-new" type="button" onclick="location.href='/restaurant/create'" ><i class="fas fa-plus"></i> Cadastrar novo Restaurante</button>
+                  <button class="btn-new" type="button" onclick="location.href='/dish/create'" ><i class="fas fa-plus"></i> Cadastrar novo Prato</button>
               </div>
           </form>
       </fieldset>
   </div>
-  <rsApp-list-restaurant [restaurants]="restaurants"></rsApp-list-restaurant>
+  <rsApp-list-dish [dishes]="dishes"></rsApp-list-dish>
 </div>
