ajusto de links

--- a/Restaurant.System/RestaurantSystemAngular/src/app/list-restaurant/list-restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/list-restaurant/list-restaurant.component.html
@@ -6,8 +6,8 @@
             <th>Restaurantes</th>
         </tr>
         <tr *ngFor="let restaurant of restaurants">
-            <td><i class="fas fa-minus"></i></td>
-            <td><a (click)="edit({{restaurant.Id}})"><i class="fas fa-pencil-alt"></i></a></td>
+            <td><a [routerLink]="['/restaurant/delete', restaurant.Id]"><i class="fas fa-minus"></i></a></td>
+            <td><a [routerLink]="['/restaurant/edit', restaurant.Id]"><i class="fas fa-pencil-alt"></i></a></td>
             <td>{{restaurant.Name}}</td>
         </tr>
     </table>
