--- a/Restaurant.System/RestaurantSystemAngular/src/app/edit-restaurant/edit-restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/edit-restaurant/edit-restaurant.component.html
@@ -12,7 +12,7 @@
                   <input type="text" class="form-control" name="name" [(ngModel)]="restaurant.Name" />
               </div>
               <div class="form-group col-md-12">
-                  <button class="btn-cancel" type="button" onclick="location.href='/restaurant'"><i class="fas fa-reply"></i> Cancelar</button>
+                  <button class="btn-cancel" type="button" [routerLink]="['/restaurant']"><i class="fas fa-reply"></i> Cancelar</button>
                   <button class="btn-new" type="submit"><i class="fas fa-save"></i> Salvar</button>
               </div>
           </form>
