--- a/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
@@ -12,7 +12,7 @@
               </div>
               <div class="form-group col-md-12">
                   <button class="btn-search" type="submit"><i class="fas fa-search"></i> Pesquisar</button> 
-                  <button class="btn-new" type="button" onclick="location.href='/restaurant/create'" ><i class="fas fa-plus"></i> Cadastrar novo Restaurante</button>
+                  <button class="btn-new" type="button" [routerLink]="['/restaurant/create']"><i class="fas fa-plus"></i> Cadastrar novo Restaurante</button>
               </div>
           </form>
       </fieldset>
