--- a/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
@@ -1,14 +1,14 @@
 <div class="panel-title">
   <h4>Restaurantes</h4>
 </div>
-<div class="panel-body" ng-app="restaurantSystem" ng-controller="restaurantListController">
+<div class="panel-body">
   <div class="panel-default">
       <fieldset>
           <legend>Filtros</legend>
           <form (submit)="search()">
               <div class="form-group col-md-12">
                   <label class="control-label col-md-12">Nome:</label>
-                  <input type="text" class="form-control" name="searchName" [(ngModel)]="searchName" />
+                  <input type="text" class="form-control col-md-8" name="searchName" [(ngModel)]="searchName" />
               </div>
               <div class="form-group col-md-12">
                   <button class="btn-search" type="submit"><i class="fas fa-search"></i> Pesquisar</button> 
