--- a/Restaurant.System/RestaurantSystemAngular/src/app/list-restaurant/list-restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/list-restaurant/list-restaurant.component.html
@@ -6,7 +6,7 @@
             <th>Restaurantes</th>
         </tr>
         <tr *ngFor="let restaurant of restaurants">
-            <td><a (click)="delete(restaurant.Id)"><i class="fas fa-minus"></i></a></td>
+            <td><a (click)="delete(restaurant.Id)" href="javascript:void(0)"><i class="fas fa-minus"></i></a></td>
             <td><a [routerLink]="['/restaurant/edit', restaurant.Id]"><i class="fas fa-pencil-alt"></i></a></td>
             <td>{{restaurant.Name}}</td>
         </tr>
