--- a/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
+++ b/Restaurant.System/RestaurantSystemAngular/src/app/restaurant/restaurant.component.html
@@ -8,7 +8,7 @@
           <form (submit)="search()">
               <div class="form-group col-md-12">
                   <label class="control-label col-md-12">Nome:</label>
-                  <input type="text" class="form-control col-md-8" name="searchName" [(ngModel)]="searchName" />
+                  <input type="text" class="form-control col-md-8" name="searchName" [(ngModel)]="searchName" value="" />
               </div>
               <div class="form-group col-md-12">
                   <button class="btn-search" type="submit"><i class="fas fa-search"></i> Pesquisar</button> 
